data/derived/comb/progs/unify/prog0908.ml.out
Characters 59-60:
  let fixpoint (f,b) = wwhile ((fun (f, b)-> if f b = b then b else f b),b);;
                                                             ^
Error: This expression has type 'a but an expression was expected of type
         (('a -> 'a) * 'a) * bool
       The type variable 'a occurs inside (('a -> 'a) * 'a) * bool
